# PytestAutoApi

./: .gitignore  app_mqtt_main.py  app_mqtt_manager.py  auto_general_testcase_main.py  ble_main.py  device.py  device_gui.py  device_manager.py  dr.py  generate_report_main.py  main.py  mqtt_client.py  mqtt_main.py  pyproject.toml  pytest.ini  redis_main.py  requirements.txt  run_app_ui_main.py  run_test.py  serials.py  t.py  test.py  tt.py  tttt.json  ui_main.py  接口测试报告.xlsx
Files/Swagger/: appdevice-ali.yaml  center-ali.yaml  code-ali.yaml  mqtt-ali.yaml  notify-ali.yaml  pay-ali.yaml  product-ali.yaml  system-ali.yaml  t.py  tt.py
Files/Testcase/: .yaml  api_addInfo.yaml  api_center_post.yaml  api_deleteInfo.yaml  api_hostList.yaml  api_queryInfo.yaml  api_serverAndCountryCodeList.yaml  api_tcpInfo_{area}.yaml  api_tcpList.yaml  api_updateInfo.yaml  app_info_agent_agentGoogleFb.yaml  app_info_agent_androidNotifyMessage.yaml  app_info_agent_category_{dictType}.yaml  app_info_agent_common_post.yaml  app_info_agent_deleteAccountNode.yaml  app_info_agent_dictType_category.yaml  app_info_agent_forgetPwdMailCode.yaml  app_info_agent_forgetPwdMailCodeTest.yaml  app_info_agent_googlePayOrderInfo.yaml  app_info_agent_iot_post.yaml  app_info_agent_node_syncDevice.yaml  app_info_agent_node_syncDeviceDelete.yaml  app_info_agent_payCenter_post.yaml  app_info_agent_receiveNotifyMessage.yaml  app_info_agent_registerMailCode.yaml  app_info_agent_registerMailCodeTest.yaml  app_info_agent_removeToken.yaml  app_info_agent_reportToken.yaml  app_info_agent_sendMail.yaml  app_info_agent_updateLogout.yaml  app_info_agent_{dictType}.yaml  app_info_appUser_checkUserRegion_{userUid}.yaml  app_info_appUser_forgetPwd.yaml  app_info_appUser_forgetPwdCheckMailCode.yaml  app_info_appUser_forgetPwdCheckMailCodeTest.yaml  app_info_appUser_forgetPwdTest.yaml  app_info_appUser_login.yaml  app_info_appUser_loginTest.yaml  app_info_appUser_pet_checkAccountType.yaml  app_info_appUser_pet_login.yaml  (+767 more)
Pipeline/: Jenkinsfile
UI/drivers/: driver_factory.py
UI/page_object/: login_page.py
UI/test_cases/: test_login.py
app/: main.py
app/api/: routes.py
app/data/: index.json
app/function/: routes.py
app/routers/: case.py  run.py  spec.py
app/services/: case_generator.py  data_filler.py  failure_classifier.py  report_analyzer.py  spec_parser.py
app/utils/: swagger_util.py
backend/: main.py
backend/api/: routes.py
backend/data/: index.json
backend/function/: routes.py
backend/services/: api_generator_cases.py  case_schema.py  function_generator_cases.py  runner.py  spec_parser.py  trend_analyzer.py
backend/uploads/: app-ali.yaml  mqtt-ali.yaml  notify-ali.yaml  oplogs-ali.yaml  resource-ali.yaml
backend/utils/: case_control.py  custom_exceptions.py  file_control.py  report_util.py  response_util.py
base/android/: android_ui_client.py
common/: case_order.yaml  case_order_back.yaml  config.yaml  setting.py
common/appium/: appOperator.py
config/: app_ui_android_devices_info.yaml  temp_email.yaml
data/: index.json
data/Banner/: banner_add.yaml  banner_cancel_publish.yaml  banner_delete.yaml  banner_detail.yaml  banner_edit.yaml  banner_list.yaml  banner_publish.yaml  test_banner.py
data/Login/: get_code.yaml  login.yaml  upload_img.yaml
data/app_ui/: login_page.yaml
data/cases/: 2025-11-11_10-33-05_登录.json  2025-11-11_10-46-05_告警消息.json
frontend/: package-lock.json  package.json  streamlit_app.py  vite.config.js
frontend/pages/: exce_case.py  general_case.py  upload_api.py  view_report.py
frontend/src/: App.vue  main.js
frontend/utils/: api_client.py
interface_case/: test_interface_data.py
interface_data/: case_auth_emailLogin.yaml  case_auth_innerLogin.yaml  case_auth_login.yaml  case_auth_logout.yaml  case_auth_register.yaml  case_auth_smsLogin.yaml  case_auth_xcxLogin.yaml
protobuf/: protobuf_to_py.py
protobuf/protobuf_file/: birdOssEvent.proto  devEventUp.proto  firmwareVersion.proto  generalBuffData.proto  keeplive.proto  reboot.proto  upgradeFirmware.proto
protobuf/protobuf_json/: default_assignnet.proto.json  default_birdossevent.proto.json  default_checkmodel.proto.json  default_cmdpro.proto.json  default_deveventup.proto.json  default_deviceprop.proto.json  default_firmwareversion.proto.json  default_generalbuffdata.proto.json  default_keeplive.proto.json  default_modelfunction.proto.json  default_ntptime.proto.json  default_productmodel.proto.json  default_reboot.proto.json  default_shadowproset.proto.json  default_unbinduser.proto.json  default_upgradefirmware.proto.json
protobuf/protobuf_py/: __init__.py  assignNet.proto  assignNet.proto.pb  assignNet_pb2.py  birdOssEvent.proto.pb  birdOssEvent_pb2.py  checkModel.proto  checkModel.proto.pb  checkModel_pb2.py  cmdPro.proto  cmdPro.proto.pb  cmdPro_pb2.py  devEventUp.proto.pb  devEventUp_pb2.py  deviceProp.proto  deviceProp.proto.pb  deviceProp_pb2.py  firmwareVersion.proto.pb  firmwareVersion_pb2.py  generalBuffData.proto.pb  generalBuffData_pb2.py  keeplive.proto.pb  keeplive_pb2.py  modelFunction.proto  modelFunction.proto.pb  modelFunction_pb2.py  modelType.proto  modelType.proto.pb  modelType_pb2.py  ntpTime.proto  (+15 more)
reports/: latest_report.json  report_20251105_151857.json  report_20251105_153214.json  report_20251119_100646.json  report_20251119_100900.json  report_20251119_113423.json  report_20251119_113825.json  report_20251119_161421.json  report_20251119_161731.json  report_20251119_163043.json  report_20251119_164256.json  report_20251119_164429.json  report_20251119_165836.json  report_20251119_170636.json  report_20251119_180010.json  report_20251119_180054.json  report_20251119_180355.json  report_20251120_105452.json  report_20251120_112614.json  report_20251120_113325.json  report_20251120_113541.json  report_20251120_113556.json  report_20251120_113705.json  report_20251120_113811.json  report_20251120_113855.json  report_20251120_143001.json  report_20251120_164720.json  report_20251120_164839.json
test_case/: __init__.py  conftest.py
tests/: test_demo.py
utils/: __init__.py
(+1554 files in other folders)
