[project]
name = "pytestautoapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiomqtt==2.4.0",
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "allure-pytest==2.13.5",
    "allure-python-commons==2.13.5",
    "annotated-types==0.7.0",
    "ansicon==1.89.0",
    "anthropic==0.59.0",
    "anyio==4.9.0",
    "appium-python-client==2.1.4",
    "asn1==2.8.0",
    "astor==0.8.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.3",
    "bleak==0.22.3",
    "bleak-winrt==1.2.0",
    "blessed==1.21.0",
    "boto3==1.39.12",
    "botocore==1.39.12",
    "bpylist2==4.1.1",
    "bs4==0.0.2",
    "cached-property==2.0.1",
    "certifi==2025.1.31",
    "cffi==2.0.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudflare==4.1.0",
    "colorama==0.4.6",
    "colored==2.3.0",
    "coloredlogs==15.0.1",
    "colorlog==6.9.0",
    "construct==2.10.70",
    "contourpy==1.3.1",
    "courlan==1.3.2",
    "cryptography==45.0.7",
    "cssselect==1.3.0",
    "cycler==0.12.1",
    "cython==3.1.3",
    "daemonize==2.5.0",
    "dataclasses-json==0.6.7",
    "datarecorder==3.6.2",
    "dateparser==1.2.2",
    "ddddocr==1.5.5",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "developer-disk-image==0.0.4",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "downloadkit==2.0.7",
    "drissionpage==4.1.0.18",
    "easyocr==1.7.2",
    "editor==1.6.6",
    "email-validator==2.2.0",
    "enum-compat==0.0.3",
    "et-xmlfile==2.0.0",
    "faiss-cpu==1.11.0.post1",
    "faker==37.1.0",
    "fastapi==0.115.14",
    "fastapi-cli==0.0.7",
    "ffmpy==0.6.1",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "fire==0.7.0",
    "flask==2.1.3",
    "flask-socketio==4.3.1",
    "flatbuffers==24.3.25",
    "fonttools==4.57.0",
    "fsspec==2025.9.0",
    "future==1.0.0",
    "google==3.0.0",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "gpxpy==1.5.0",
    "greenlet==3.2.3",
    "groovy==0.1.2",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "h2==4.2.0",
    "hexdump==3.3",
    "hpack==4.1.0",
    "html2text==2025.4.15",
    "htmldate==1.9.3",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.4",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "ibm-cos-sdk==2.14.2",
    "ibm-cos-sdk-core==2.14.2",
    "ibm-cos-sdk-s3transfer==2.14.2",
    "ibm-watsonx-ai==1.3.32",
    "idna==3.10",
    "ifaddr==0.2.0",
    "imageio==2.37.0",
    "iniconfig==2.1.0",
    "inquirer3==0.6.1",
    "ipsw-parser==1.4.3",
    "iso8601==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jinxed==1.3.0",
    "jiter==0.10.0",
    "json-repair==0.47.8",
    "jsonpatch==1.33",
    "jsonpath==0.82.2",
    "justext==3.0.2",
    "kiwisolver==1.4.8",
    "la-panic==0.5.0",
    "langchain==0.3.22",
    "langchain-anthropic==0.3.3",
    "langchain-aws==0.2.19",
    "langchain-community==0.3.20",
    "langchain-core==0.3.49",
    "langchain-deepseek==0.1.3",
    "langchain-google-genai==2.1.2",
    "langchain-ibm==0.3.10",
    "langchain-mcp-adapters==0.0.9",
    "langchain-mistralai==0.2.4",
    "langchain-ollama==0.3.0",
    "langchain-openai==0.3.11",
    "langchain-text-splitters==0.3.7",
    "langgraph==0.3.34",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.74",
    "langsmith==0.3.45",
    "lazy-loader==0.4",
    "lmdb==1.7.3",
    "loguru==0.7.3",
    "logzero==1.7.0",
    "lomond==0.3.3",
    "lxml==5.4.0",
    "lxml-html-clean==0.4.2",
    "lzfse==0.4.2",
    "maincontentextractor==0.0.4",
    "markdownify==1.1.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.1",
    "mcp==1.6.0",
    "mem0ai==0.1.93",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "naked==0.1.32",
    "networkx==3.5",
    "ninja==1.13.0",
    "numpy==2.2.4",
    "ollama==0.5.1",
    "onnxruntime==1.22.1",
    "opack2==0.0.1",
    "openai==1.97.1",
    "opencv-contrib-python==4.12.0.88",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.10.0.84",
    "openpyxl==3.1.5",
    "opt-einsum==3.3.0",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "paho-mqtt==2.1.0",
    "parameter-decorators==0.0.2",
    "pillow==11.1.0",
    "playwright==1.54.0",
    "pluggy==1.5.0",
    "plumbum==1.9.0",
    "portalocker==3.2.0",
    "posthog==3.25.0",
    "proto-plus==1.26.1",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "py==1.11.0",
    "pyclipper==1.3.0.post6",
    "pycparser==2.23",
    "pycrashreport==1.2.6",
    "pycryptodome==3.23.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pydub==0.25.1",
    "pyee==13.0.0",
    "pyfiglet==1.0.2",
    "pygnuutils==0.1.1",
    "pyimg4==0.8.8",
    "pykdebugparser==1.2.7",
    "pylzss==0.3.4",
    "pymysql==1.1.1",
    "pyopenssl==25.1.0",
    "pyparsing==3.2.3",
    "pyperclip==1.9.0",
    "pyreadline3==3.4.1",
    "pyserial==3.5",
    "pytesseract==0.3.13",
    "pytest==8.3.5",
    "pytest-metadata==3.1.1",
    "pytest-order==1.3.0",
    "python-bidi==0.6.6",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-engineio==3.13.2",
    "python-multipart==0.0.20",
    "python-pcapng==2.1.1",
    "python-socketio==4.6.0",
    "pytun-pmd3==2.2.2",
    "pytz==2024.2",
    "pyusb==1.3.1",
    "pyyaml==6.0.2",
    "qdrant-client==1.15.0",
    "qh3==1.5.3",
    "rapidfuzz==3.14.1",
    "readchar==4.2.1",
    "redis==6.1.0",
    "regex==2024.11.6",
    "remotezip2==0.0.2",
    "requests==2.32.4",
    "requests-file==2.1.0",
    "requests-toolbelt==1.0.0",
    "retry==0.9.2",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "rsa==4.9.1",
    "ruff==0.12.4",
    "runs==1.2.2",
    "s3transfer==0.13.1",
    "safehttpx==0.1.6",
    "scikit-image==0.25.2",
    "scipy==1.16.1",
    "screeninfo==0.8.1",
    "selenium==4.0.0",
    "semantic-version==2.10.0",
    "shapely==2.1.1",
    "shellescape==3.8.1",
    "shellingham==1.5.4",
    "simple-tornado==0.2.2",
    "simplejson==3.20.1",
    "simsimd==6.5.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.41",
    "srptools==1.0.1",
    "sse-starlette==2.4.1",
    "sslpsk-pmd3==1.0.3",
    "starlette==0.46.2",
    "stringzilla==4.0.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "termcolor==2.5.0",
    "tifffile==2025.9.9",
    "tiktoken==0.9.0",
    "tld==0.13.1",
    "tldextract==5.3.0",
    "tomlkit==0.13.3",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "trafilatura==2.0.0",
    "trio==0.31.0",
    "trio-websocket==0.12.2",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==1.26.20",
    "urllib3-secure-extra==0.1.0",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==2.0.3",
    "win32-setctime==1.2.0",
    "wsproto==1.2.0",
    "xlwt==1.3.0",
    "xmod==1.8.1",
    "xonsh==0.19.9",
    "xxhash==3.5.0",
    "yt-dlp==2025.3.31",
    "zstandard==0.23.0",
]
